--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "react-step-by-step",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+	"snapshotSerializers": ["enzyme-to-json/serializer"]
+  },
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-test-renderer": "^16.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -17,7 +24,7 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-	"preview": "markdown-preview README.md",
+    "preview": "markdown-preview README.md",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
